# entropy-program

./: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs
cli/: Cargo.toml
program/: Cargo.toml
