[package]
name = "entropy-api"
description = "API for interacting with the Entropy program"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bytemuck.workspace = true
num_enum.workspace = true
solana-program.workspace = true
steel.workspace = true
thiserror.workspace = true
